<?xml version="1.0" encoding="utf-8"?>
<resources xml:lang="es">
    <string name="app_name">Chat_Llamada</string>
    <string name="login">Ingresar</string>
    <string name="sign_in">Registrarse</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="ingresar_su_rol">Ingresar su rol</string>
    <string name="espa_ol">ingles</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="inventario">Inventario</string>

</resources>


