<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auntenthification">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="234dp"
        android:layout_height="154dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        app:srcCompat="@drawable/ferretero" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/amp_dark_blue"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758" />

    <Button
        android:id="@+id/Sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/amp_dark_blue"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/amp_dark_blue"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/ingrese_su_correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <EditText
        android:id="@+id/Contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E16767"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <EditText
        android:id="@+id/Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E16767"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ingresar_su_rol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/idioma"
        android:layout_width="151dp"
        android:layout_height="27dp"
        android:layout_marginBottom="20dp"
        android:text="@string/espa_ol"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="42dp"
        android:layout_height="40dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/Nombre"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tool_icon_vector" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="42dp"
        android:layout_height="40dp"
        android:layout_marginTop="328dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/Contrasenia"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_19667" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="42dp"
        android:layout_height="40dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/correo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tool_icon_vector__1_" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="408dp"
        android:layout_height="55dp"
        android:layout_marginBottom="4dp"
        android:background="#D53535"
        android:backgroundTint="#CDDC39"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/common_google_signin_btn_icon_light_normal_background" />

</androidx.constraintlayout.widget.ConstraintLayout>